v0.13
	* FIX : Connection error reporting in name finder service. (sponsored by today's power outage;)
	* FIX : Ugly way to ensure ways with duplicate consecutive node will not be uploaded/exported/saved
	* ADD : Do not auto-complete "name" tag + make "created_by" read-only
	* FIX : Selecting elements with Find do not update the menus (closes #1375)
	* FIX : tag values inputed during session not added to auto-completion (refs #1373)
	* ADD : "View" - "Show directional Arrows" menu. "Never" obviously never shows the arrows, "Always" obviously always shows them, even for non-roads. "Oneway" is the equivalent of the existing and is the default. (closes #1316)
	* FIX : if a style was selected for a node but no icon was defined, nothing was drawn
	* ADD : Possibility to add/remove members from Relations (closes #1265)
	* ADD : Automatically save/restore bookmarks, TMS servers & WMS servers to OSM user preferences (closes #1362)
	* ADD : Add Name Finder service to "Go to" dialog.
	* FIX : If TRANSDIR_SYSTEM isn't set use QLibraryInfo::TranslationsPath. (closes #1358)
	* FIX : Plural/paucal forms in DownloadOSM.cpp (closes #1306)
	* FIX : World OSM manager now uses standard API rather than the not quite stable XAPI service
	* FIX : GPS dock coordinates display wrong (fixes #1303)
	* FIX : Background Image: show warning about Yahoo non-cacheable (closes #1310)
	* ADD : Single mouse button preference (closes #1314)
	* ADD : Tag Templates (closes #1031)
	* ADD : "Area" type to tag selector (matches closed roads); Use as "Type is Area".
	* ADD : context menu to the slippy map to reset viewport to default (as a side effect, disable right mouse click for zoomout)
	* ADD : "locked selection". Pressing "Tab" enters lock mode. In this mode, only the features around last click can be selected. Repeatedly press "Tab" to select them in cycle.
	* ADD : when hovering/focussing a feature, its parents appear in dotted lines