@@ -111,7 +111,7 @@ p, li { white-space: pre-wrap; }
 &lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
 &lt;/style>&lt;/head>&lt;body style=" font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;a href="http://www.irule.be/bvh/c++/merkaartor">&lt;span style=" text-decoration: underline; color:#0000ff;">http://www.irule.be/bvh/c++/merkaartor&lt;/span>&lt;/a>&lt;/p>&lt;/body>&lt;/html></string>
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;a href="http://merkaartor.org/">&lt;span style=" text-decoration: underline; color:#0000ff;">http://merkaartor.org/&lt;/span>&lt;/a>&lt;/p>&lt;/body>&lt;/html></string>
      </property>
      <property name="textInteractionFlags" >
       <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
